[gd_scene load_steps=2 format=3 uid="uid://shop123456"]

[ext_resource type="Script" path="res://scenes/shop/shop.gd" id="1"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.1, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 20.0
offset_right = 550.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 48
text = "ðŸ›’ Mercador das Sombras"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3200.0
offset_top = 30.0
offset_right = 3400.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 32
text = "ðŸ’° 0"

[node name="CardsSection" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 150.0
offset_right = 1600.0
offset_bottom = 700.0

[node name="CardsLabel" type="Label" parent="CardsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Cartas Ã  Venda:"

[node name="CardsContainer" type="HBoxContainer" parent="CardsSection"]
layout_mode = 2
theme_minimum_h_separation = 20

[node name="ArtifactsSection" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1700.0
offset_top = 150.0
offset_right = 3300.0
offset_bottom = 700.0

[node name="ArtifactsLabel" type="Label" parent="ArtifactsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Artefatos Ã  Venda:"

[node name="ArtifactsContainer" type="VBoxContainer" parent="ArtifactsSection"]
layout_mode = 2
theme_minimum_v_separation = 15

[node name="RemoveSection" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 750.0
offset_right = 1600.0
offset_bottom = 1000.0

[node name="RemoveLabel" type="Label" parent="RemoveSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Remover Carta (50ðŸ’°):"

[node name="RemoveButton" type="Button" parent="RemoveSection"]
layout_mode = 2
text = "Escolher Carta para Remover"

[node name="LeaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1500.0
offset_top = 1870.0
offset_right = 1900.0
offset_bottom = 1950.0
theme_override_font_sizes/font_size = 24
text = "Sair da Loja"
